--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.4.1",
+    "react-codemirror": "^1.0.0",
     "react-dom": "^16.4.1",
     "react-scripts": "2.0.0-next.3e165448"
   },
