--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.3.0",
+    "@material-ui/icons": "^1.1.0",
+    "browserfs": "^1.4.3",
+    "d3": "^5.5.0",
+    "d3-bboxCollide": "^1.0.4",
+    "jss-camel-case": "^6.1.0",
+    "jss-global": "^3.0.0",
+    "jss-nested": "^6.0.1",
     "react": "^16.4.1",
     "react-codemirror": "^1.0.0",
     "react-dom": "^16.4.1",
+    "react-jss": "^8.6.0",
     "react-scripts": "2.0.0-next.3e165448"
   },
   "scripts": {
