--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "jss-camel-case": "^6.1.0",
     "jss-global": "^3.0.0",
     "jss-nested": "^6.0.1",
+    "mobx": "^5.0.3",
+    "mobx-react": "^5.2.3",
     "react": "^16.4.1",
     "react-codemirror": "^1.0.0",
     "react-dom": "^16.4.1",
