--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "browserfs": "^1.4.3",
     "d3": "^5.5.0",
     "d3-bboxCollide": "^1.0.4",
+    "hammerjs": "^2.0.8",
     "jss-camel-case": "^6.1.0",
     "jss-global": "^3.0.0",
     "jss-nested": "^6.0.1",
@@ -17,7 +18,9 @@
     "react-codemirror": "^1.0.0",
     "react-dom": "^16.4.1",
     "react-jss": "^8.6.0",
-    "react-scripts": "2.0.0-next.3e165448"
+    "react-scripts": "2.0.0-next.3e165448",
+    "uuid": "^3.3.2",
+    "wolfy87-eventemitter": "^5.2.5"
   },
   "scripts": {
     "start": "react-scripts start",
