--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "jss-camel-case": "^6.1.0",
     "jss-global": "^3.0.0",
     "jss-nested": "^6.0.1",
+    "lodash": "^4.17.10",
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-codemirror": "^1.0.0",
     "react-dom": "^16.4.1",
