--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "browserfs": "^1.4.3",
     "d3": "^5.5.0",
     "d3-bboxCollide": "^1.0.4",
+    "d3-flextree": "^2.1.1",
     "hammerjs": "^2.0.8",
     "jss-camel-case": "^6.1.0",
     "jss-global": "^3.0.0",
