--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^16.4.1",
     "react-jss": "^8.6.0",
     "react-scripts": "2.0.0-next.3e165448",
+    "util.promisify": "^1.0.0",
     "uuid": "^3.3.2",
     "wolfy87-eventemitter": "^5.2.5"
   },
