--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "d3-bboxCollide": "^1.0.4",
     "d3-flextree": "^2.1.1",
     "hammerjs": "^2.0.8",
+    "isomorphic-git": "^0.35.1",
     "jss-camel-case": "^6.1.0",
     "jss-global": "^3.0.0",
     "jss-nested": "^6.0.1",
     "lodash": "^4.17.10",
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
+    "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-codemirror": "^1.0.0",
@@ -24,13 +26,14 @@
     "react-scripts": "2.0.0-next.3e165448",
     "util.promisify": "^1.0.0",
     "uuid": "^3.3.2",
+    "webpack-merge": "^4.1.4",
     "wolfy87-eventemitter": "^5.2.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start # react-scripts start",
+    "build": "react-app-rewired build # react-scripts build",
+    "test": "react-app-rewired  test --env=jsdom # react-scripts test --env=jsdom",
+    "eject": "# react-scripts eject"
   },
   "browserslist": {
     "development": [
@@ -43,5 +46,15 @@
       "not op_mini all",
       "ie 11"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.116",
+    "@types/node": "^10.9.4",
+    "@types/react-dom": "^16.0.7",
+    "@types/util.promisify": "^1.0.0",
+    "@types/uuid": "^3.4.4",
+    "react-app-rewired": "^1.6.2",
+    "ts-loader": "^5.0.0",
+    "typescript": "^3.0.3"
   }
 }
