--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
-    "noImplicitAny": true,
+    // "target": "es5",
+    // "module": "commonjs",
+    // "noImplicitAny": true,
     "lib": [
-    "es5","es2015", "es6", "dom"
+      "es2015", "dom"
     ],
     "jsx": "react",
   }
