--- a/package.json
+++ b/package.json
@@ -3,86 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "7.0.0-beta.46",
-    "@babel/runtime": "7.0.0-beta.46",
     "@material-ui/core": "^1.3.0",
     "@material-ui/icons": "^1.1.0",
-    "autoprefixer": "8.5.0",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "8.2.3",
-    "babel-jest": "22.4.3",
-    "babel-loader": "8.0.0-beta.0",
-    "babel-plugin-named-asset-import": "1.0.0-next.3e165448",
-    "babel-preset-react-app": "4.0.0-next.3e165448",
     "bfj": "5.2.0",
     "browserfs": "^1.4.3",
-    "case-sensitive-paths-webpack-plugin": "2.1.2",
-    "chalk": "2.4.1",
-    "css-loader": "0.28.11",
     "d3": "^5.5.0",
     "d3-bboxCollide": "^1.0.4",
     "d3-flextree": "^2.1.1",
-    "dotenv": "5.0.1",
-    "dotenv-expand": "4.2.0",
-    "eslint": "4.19.1",
-    "eslint-config-react-app": "3.0.0-next.3e165448",
-    "eslint-loader": "2.0.0",
-    "eslint-plugin-flowtype": "2.46.3",
-    "eslint-plugin-import": "2.11.0",
-    "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-react": "7.8.2",
-    "file-loader": "1.1.11",
-    "fs-extra": "5.0.0",
-    "graphql": "0.13.2",
-    "graphql-tag": "2.9.2",
     "hammerjs": "^2.0.8",
-    "html-webpack-plugin": "3.2.0",
-    "identity-obj-proxy": "3.0.0",
     "isomorphic-git": "^0.35.1",
-    "jest": "22.4.3",
     "jss-camel-case": "^6.1.0",
     "jss-global": "^3.0.0",
     "jss-nested": "^6.0.1",
-    "loader-utils": "^1.1.0",
     "lodash": "^4.17.10",
-    "mini-css-extract-plugin": "^0.4.0",
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
     "moment": "^2.22.2",
-    "object-assign": "4.1.1",
-    "optimize-css-assets-webpack-plugin": "^4.0.1",
-    "postcss-flexbugs-fixes": "3.3.1",
-    "postcss-loader": "2.1.5",
     "promise": "8.0.1",
     "prop-types": "^15.6.2",
-    "raf": "3.4.0",
     "react": "^16.4.1",
-    "react-codemirror": "^1.0.0",
-    "react-dev-utils": "6.0.0-next.3e165448",
     "react-dom": "^16.4.1",
     "react-jss": "^8.6.0",
     "resolve": "1.6.0",
-    "sass-loader": "7.0.1",
-    "style-loader": "0.21.0",
-    "svgr": "1.9.2",
-    "sw-precache-webpack-plugin": "0.11.5",
-    "thread-loader": "1.1.5",
-    "uglifyjs-webpack-plugin": "1.2.5",
-    "url-loader": "1.0.1",
     "util.promisify": "^1.0.0",
     "uuid": "^3.3.2",
-    "webpack": "4.8.3",
-    "webpack-dev-server": "3.1.4",
-    "webpack-manifest-plugin": "2.0.3",
-    "webpack-merge": "^4.1.4",
     "whatwg-fetch": "2.0.4",
     "wolfy87-eventemitter": "^5.2.5"
   },
-  "scripts": {
-    "start": "react-app-rewired start # node scripts/start.js",
-    "build": "react-app-rewired build # node scripts/build.js",
-    "test": "react-app-rewired  test --env=jsdom # node scripts/test.js --env=jsdom"
-  },
+  "scripts": {},
   "browserslist": {
     "development": [
       "last 2 chrome versions",
@@ -96,14 +44,33 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-stage-2": "^7.0.0",
     "@types/lodash": "^4.14.116",
     "@types/node": "^10.9.4",
     "@types/react-dom": "^16.0.7",
     "@types/util.promisify": "^1.0.0",
     "@types/uuid": "^3.4.4",
-    "react-app-rewired": "^1.6.2",
+    "autoprefixer": "8.5.0",
+    "babel-loader": "^8.0.2",
+    "case-sensitive-paths-webpack-plugin": "2.1.2",
+    "css-loader": "0.28.11",
+    "html-webpack-plugin": "3.2.0",
+    "json-loader": "^0.5.7",
+    "mini-css-extract-plugin": "^0.4.0",
+    "postcss-loader": "2.1.5",
+    "style-loader": "0.21.0",
     "ts-loader": "^5.0.0",
-    "typescript": "^3.0.3"
+    "typescript": "^3.0.3",
+    "url-loader": "1.0.1",
+    "webpack": "4.8.3",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "3.1.4",
+    "webpack-merge": "^4.1.4"
   },
   "jest": {
     "collectCoverageFrom": [
