--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
-    // "target": "es5",
+    "sourceMap": true,
+    "experimentalDecorators": true,
+    "target": "es5",
     // "module": "commonjs",
     // "noImplicitAny": true,
     "lib": [
