--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "dependencies": {
     "@material-ui/core": "^1.3.0",
     "@material-ui/icons": "^3.0.1",
+    "@types/hammerjs": "^2.0.36",
+    "@types/html2canvas": "^0.0.35",
+    "@types/react-codemirror": "^1.0.2",
     "bfj": "5.2.0",
     "browserfs": "^1.4.3",
     "d3": "^5.5.0",
     "d3-bboxCollide": "^1.0.4",
     "d3-flextree": "^2.1.1",
+    "hammer-touchemulator": "^0.0.2",
     "hammerjs": "^2.0.8",
+    "html2canvas": "^1.0.0-alpha.12",
     "isomorphic-git": "^0.35.1",
     "jss-camel-case": "^6.1.0",
     "jss-global": "^3.0.0",
@@ -22,8 +27,10 @@
     "promise": "8.0.1",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
+    "react-codemirror": "^1.0.0",
     "react-dom": "^16.4.1",
     "react-jss": "^8.6.0",
+    "react-resize-detector": "^3.1.2",
     "resolve": "1.6.0",
     "util.promisify": "^1.0.0",
     "uuid": "^3.3.2",
@@ -31,7 +38,7 @@
     "wolfy87-eventemitter": "^5.2.5"
   },
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --host 0.0.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
